--- a/tmpl/edit.html
+++ b/tmpl/edit.html
@@ -1,20 +1,14 @@
-<!doctype html>
-<html lang="en-US">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="/static/default.css" />
-		<title>Editing - {{.Title}}</title>
-	</head>
+{{ template "header.html" . }}
 	<body>
 		<h1>Editing {{.Title}}</h1>
 
 		<form action="/save/{{.Name}}" method="POST">
+			<label for="title">Page Title:</label>
 			<input type="text" name="title" value={{.Title}} />
+			<label for="body">Page Body:</label>
 			<textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea><br />
 			<input type="submit" name="submit" value="Save" />
 			<input type="submit" name="submit" value="Cancel" />
 		</form> 
 	</body>
-</html>
-
+{{ template "footer.html" . }}
